tests/reference/asr-array_05-321b5d3.stderr
semantic error: Rank mismatch in array reference: the array `x` has rank `1, but is referenced as rank `2
  --> tests/errors/array_05.f90:12:14
   |
12 |     allocate(type_01%x(1, 2))
   |              ^^^^^^^^^^^^^^^ 
